Changed CSS into SCSS + fixed overflow not hidden

--- a/agendo-ui/src/app/core/main/main.component.scss
+++ b/agendo-ui/src/app/core/main/main.component.scss
@@ -1,6 +1,6 @@
 .content {
     display: flex;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     flex-direction: column;
     overflow: hidden;
