--- a/agendo-ui/src/app/feature/todo-view/components/board-menu/board-menu.component.scss
+++ b/agendo-ui/src/app/feature/todo-view/components/board-menu/board-menu.component.scss
@@ -2,12 +2,12 @@
     background-color: var(--surface-100);
     box-shadow: 5px 5px #00000005,0 0 2px #0000000d,0 1px 4px #00000014;
     z-index: 2000;
-    padding: 0.5rem 1.5rem;
     width: 16rem;
-    overflow: hidden;
+    padding: 0.5rem 1.5rem;
+    overflow-y: scroll;
 }
 
-.menu {
+.menu { 
     display: flex;
     flex-direction: column;
     gap: 0.25rem;
